    for each known tenant (by moqui.tenant.Tenant records)
- Entity Facade
  - DB meta data (create tables, etc) and primary sequenced ID queries now
    use a separate thread to run in a different transaction instead of
    suspend/resume as some databases have issues with that, especially
    nested which happens when service and framework code suspends

Bug Fixes

- Fixed issue with conditional default subscreen URL caching
- Internal login from login/api key and async/scheduled services now checks
  for disabled accounts, expired passwords, etc just like normal login
- Fixed issue with entity lists in TransactionCache, were not cloned so
  new/updated records changed lists that calling code might use
- Entities in the tenantcommon group no longer available for find and CrUD
  operations outside the DEFAULT instance (protect tenant data)


===========================================================================
Release 1.6.1 - 24 Jan 2016
===========================================================================

Moqui Framework 1.6.1 is a minor new feature and bug fix release.

This is the first release after the repository reorganization in Moqui 
Ecosystem. The runtime directory is now in a separate repository. The 
framework build now gets JAR files from Bintray JCenter instead of having
them in the framework/lib directory. Overall the result is a small
foundation with additional libraries, components, etc added as needed using
Gradle tasks.

Build Changes

- Gradle tasks to help handle runtime directory in a separate repository
  from Moqui Framework
- Added component management features as Gradle tasks
  - Components available configured in addons.xml
  - Repositories components come from configured in addons.xml
  - Get component from current or release archive (getCurrent, getRelease)
  - Get component from git repositories (getGit)
  - When getting a component, automatically gets all components it depends